--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Demo</title>
   <base href="/">
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=6cd403662d54b0dfc0ddd45fbd724215"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
